learn2swim update 1

--- a/learn2swim/index.html
+++ b/learn2swim/index.html
@@ -1,1 +1,67 @@
-learn2swim
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- bootstrap 5 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- fontawesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- permanent marker font -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mouse%20Memoirs">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="assets/icon.png" type = "image/x-icon">
+    <script src="script.js"></script>
+    <title>Learn2Swim</title>
+</head>
+<body>
+    <!--navbar-->
+    <div class="main">
+        <nav>
+            <ul>
+              <li><a href="#0"><i class="fa fa-home"></i> Home</a></li>
+              <li><a href="#0">About</a></li>
+              <li>
+                <a href="#0">Clients</a>
+                <ul>
+                  <li><a href="#0">Burger King</a></li>
+                  <li><a href="#0">Southwest Airlines</a></li>
+                  <li><a href="#0">Levi Strauss</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="#0">Services</a>
+                <ul>
+                  <li><a href="#0">Print Design</a></li>
+                  <li><a href="#0">Web Design</a></li>
+                  <li><a href="#0">Mobile App Development</a></li>
+                </ul>
+              </li>
+              <li>
+                  <a href="#0">Socials</a>
+                  <ul>
+                      <li><i class="fa fa-twitter"></i> <a href="https://twitter.com">Twitter</a></li>
+                  </ul>
+                </li>
+            </ul>
+          </nav>
+    <h1>🏊 Learn2Swim 🏊</h1>
+    <p><i>"Literally the best app to increase language vocabulary"</i></p>
+    <p class="list"><b>Free 💵 <br>Efficient ⛏️ <br>Well-maintained 💻</b></p>
+    <h3>Pick a Language</h3>
+    <a href="/learn2swim/languages/mandarin" style="text-decoration:none;"><button class="button-30" role="button"><img src="assets/flags/china.png" class="icon">Mandarin</button></a>
+    <button class="button-30" role="button"><img src="assets/flags/india.png" class="icon">Hindi</button>
+    <a href="/learn2swim/languages/spanish" style="text-decoration:none;"><button class="button-30" role="button"><img src="assets/flags/spain.png" class="icon">Spanish</button></a>
+    <a href="/learn2swim/languages/french"><button class="button-30" role="button"><img src="assets/flags/france.png" class="icon">French</button></a>
+    <a href="/learn2swim/languages/arabic"><button class="button-30" role="button"><img src="assets/flags/saudi-arabia.png" class="icon">Arabic</button></a>
+    <br>
+    <a href="/learn2swim/languages/bengali"><button class="button-30" role="button"><img src="assets/flags/bangladesh.png" class="icon">Bengali</button></a>
+    <!-- russian -->
+    <a href="/learn2swim/languages/portuguese"><button class="button-30" role="button"><img src="assets/flags/portugal.png" class="icon">Portuguese</button></a>
+    <a href="/learn2swim/languages/indonesia"><button class="button-30" role="button"><img src="assets/flags/indonesia.png" class="icon">Indonesian</button></a>
+    <br>
+    </div>
+</body>
+</html>
